[gd_scene load_steps=7 format=3 uid="uid://in3ywb6q1lg7"]

[ext_resource type="Texture2D" uid="uid://cyccdspqh3wso" path="res://Sprites/UI/nine-slice.png" id="1_4nugt"]
[ext_resource type="Script" path="res://Scenes/UI/HUD/hud.gd" id="1_e2bak"]
[ext_resource type="FontFile" uid="uid://imnkghkj0qrp" path="res://Fonts/m3x6.ttf" id="2_tebf7"]
[ext_resource type="Texture2D" uid="uid://d1ow3kntpur1m" path="res://Sprites/UI/Lor-Map.png" id="4_saaq7"]
[ext_resource type="Texture2D" uid="uid://du4h1j70ujpko" path="res://Tilesets/Taelus-Tileset.png" id="5_0djge"]
[ext_resource type="FontFile" uid="uid://rxta6h0jqudm" path="res://Fonts/m5x7.ttf" id="6_lpdjx"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_e2bak")

[node name="MainBackground" type="NinePatchRect" parent="."]
offset_right = 128.0
offset_bottom = 360.0
texture = ExtResource("1_4nugt")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="NameLabel" type="Label" parent="."]
offset_left = 8.0
offset_right = 120.0
offset_bottom = 15.0
theme_override_fonts/font = ExtResource("2_tebf7")
theme_override_font_sizes/font_size = 15
text = "NAME"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Controls" type="Label" parent="."]
offset_left = 8.0
offset_top = 304.0
offset_right = 120.0
offset_bottom = 352.0
theme_override_fonts/font = ExtResource("2_tebf7")
text = "Controls"
horizontal_alignment = 1

[node name="Main" type="Node2D" parent="."]
visible = false

[node name="RegionLabel" type="Label" parent="Main"]
offset_left = 8.0
offset_top = 16.0
offset_right = 120.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("2_tebf7")
theme_override_font_sizes/font_size = 15
text = "REGION - AREA"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DateTimeLabel" type="Label" parent="Main"]
offset_left = 8.0
offset_top = 32.0
offset_right = 120.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("2_tebf7")
theme_override_font_sizes/font_size = 15
text = "Month Day Year Season"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Map" type="Sprite2D" parent="Main"]
position = Vector2(8, 48)
texture = ExtResource("4_saaq7")
centered = false

[node name="ReputationLabel" type="Label" parent="Main"]
offset_left = 8.0
offset_top = 144.0
offset_right = 120.0
offset_bottom = 159.0
theme_override_fonts/font = ExtResource("2_tebf7")
theme_override_font_sizes/font_size = 15
text = "REPUTATION"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CopperIcon" type="Sprite2D" parent="Main"]
position = Vector2(20, 168)
texture = ExtResource("5_0djge")
hframes = 32
vframes = 16
frame = 481

[node name="CopperLabel" type="Label" parent="Main"]
offset_left = 24.0
offset_top = 160.0
offset_right = 46.0
offset_bottom = 175.0
theme_override_fonts/font = ExtResource("2_tebf7")
theme_override_font_sizes/font_size = 15
text = "000"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="SilverIcon" type="Sprite2D" parent="Main"]
position = Vector2(52, 168)
texture = ExtResource("5_0djge")
hframes = 32
vframes = 16
frame = 482

[node name="SilverLabel" type="Label" parent="Main"]
offset_left = 56.0
offset_top = 160.0
offset_right = 78.0
offset_bottom = 175.0
theme_override_fonts/font = ExtResource("2_tebf7")
theme_override_font_sizes/font_size = 15
text = "000"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="GoldIcon" type="Sprite2D" parent="Main"]
position = Vector2(84, 168)
texture = ExtResource("5_0djge")
hframes = 32
vframes = 16
frame = 483

[node name="GoldLabel" type="Label" parent="Main"]
offset_left = 88.0
offset_top = 160.0
offset_right = 111.0
offset_bottom = 175.0
theme_override_fonts/font = ExtResource("2_tebf7")
theme_override_font_sizes/font_size = 15
text = "000"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="StatusLabel" type="Label" parent="Main"]
offset_left = 8.0
offset_top = 208.0
offset_right = 120.0
offset_bottom = 223.0
theme_override_fonts/font = ExtResource("2_tebf7")
theme_override_font_sizes/font_size = 15
text = "Status: Null"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="PartyLabel" type="Label" parent="Main"]
offset_left = 8.0
offset_top = 256.0
offset_right = 120.0
offset_bottom = 271.0
theme_override_fonts/font = ExtResource("2_tebf7")
theme_override_font_sizes/font_size = 15
text = "CURRENT PARTY"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Selection" type="Node2D" parent="."]
visible = false

[node name="SelectedLabel" type="Label" parent="Selection"]
offset_left = 8.0
offset_top = 16.0
offset_right = 120.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("2_tebf7")
theme_override_font_sizes/font_size = 15
text = "ITEM NAME"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="SelectStatLabel" type="Label" parent="Selection"]
offset_left = 8.0
offset_top = 144.0
offset_right = 120.0
offset_bottom = 175.0
theme_override_fonts/font = ExtResource("2_tebf7")
theme_override_font_sizes/font_size = 15
text = "Selected Status"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Selected" type="Sprite2D" parent="Selection"]
position = Vector2(8, 32)
scale = Vector2(14, 14)
texture = ExtResource("5_0djge")
centered = false
hframes = 32
vframes = 16

[node name="SelDescriptLabel" type="Label" parent="Selection"]
offset_left = 8.0
offset_top = 175.0
offset_right = 120.0
offset_bottom = 298.0
theme_override_fonts/font = ExtResource("2_tebf7")
theme_override_font_sizes/font_size = 15
text = "  Selected description goes here."
autowrap_mode = 2

[node name="DialogueHUD" type="Node2D" parent="."]

[node name="DiagTitle" type="Label" parent="DialogueHUD"]
offset_left = 8.0
offset_top = 16.0
offset_right = 120.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("2_tebf7")
theme_override_font_sizes/font_size = 15
text = "NPC Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DiagIcon" type="Sprite2D" parent="DialogueHUD"]
position = Vector2(8, 32)

[node name="DiagDesc" type="Label" parent="DialogueHUD"]
offset_left = 8.0
offset_top = 128.0
offset_right = 120.0
offset_bottom = 298.0
theme_override_fonts/font = ExtResource("2_tebf7")
theme_override_font_sizes/font_size = 15
text = "  NPC description goes here."
autowrap_mode = 2

[node name="DialogueBackground" type="NinePatchRect" parent="DialogueHUD"]
offset_left = 168.0
offset_top = 40.0
offset_right = 424.0
offset_bottom = 320.0
texture = ExtResource("1_4nugt")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="DialogueName" type="Label" parent="DialogueHUD/DialogueBackground"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 240.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("6_lpdjx")
text = "Name"
autowrap_mode = 2

[node name="DialogueText" type="Label" parent="DialogueHUD/DialogueBackground"]
layout_mode = 0
offset_left = 16.0
offset_top = 32.0
offset_right = 240.0
offset_bottom = 264.0
theme_override_fonts/font = ExtResource("6_lpdjx")
text = "test text, this seems good so far."
autowrap_mode = 2

[node name="DiagChoiceBackground" type="NinePatchRect" parent="DialogueHUD/DialogueBackground"]
offset_left = 256.0
offset_right = 376.0
offset_bottom = 280.0
texture = ExtResource("1_4nugt")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="DiagCursor" type="Sprite2D" parent="DialogueHUD/DialogueBackground/DiagChoiceBackground"]
position = Vector2(14, 16)
texture = ExtResource("5_0djge")
hframes = 32
vframes = 17
frame = 518

[node name="Choice1" type="Label" parent="DialogueHUD/DialogueBackground/DiagChoiceBackground"]
layout_mode = 0
offset_left = 24.0
offset_top = 8.0
offset_right = 112.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("6_lpdjx")
text = "Choice-1"
autowrap_mode = 2

[node name="Choice2" type="Label" parent="DialogueHUD/DialogueBackground/DiagChoiceBackground"]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 112.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("6_lpdjx")
text = "Choice-2"
autowrap_mode = 2

[node name="Choice3" type="Label" parent="DialogueHUD/DialogueBackground/DiagChoiceBackground"]
layout_mode = 0
offset_left = 24.0
offset_top = 40.0
offset_right = 112.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("6_lpdjx")
text = "Choice-3"
autowrap_mode = 2

[node name="Choice4" type="Label" parent="DialogueHUD/DialogueBackground/DiagChoiceBackground"]
layout_mode = 0
offset_left = 24.0
offset_top = 56.0
offset_right = 112.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("6_lpdjx")
text = "Choice-4"
autowrap_mode = 2

[node name="Choice5" type="Label" parent="DialogueHUD/DialogueBackground/DiagChoiceBackground"]
layout_mode = 0
offset_left = 24.0
offset_top = 72.0
offset_right = 112.0
offset_bottom = 88.0
theme_override_fonts/font = ExtResource("6_lpdjx")
text = "Choice-5"
autowrap_mode = 2

[node name="Choice6" type="Label" parent="DialogueHUD/DialogueBackground/DiagChoiceBackground"]
layout_mode = 0
offset_left = 24.0
offset_top = 88.0
offset_right = 112.0
offset_bottom = 104.0
theme_override_fonts/font = ExtResource("6_lpdjx")
text = "Choice-6"
autowrap_mode = 2

[node name="Choice7" type="Label" parent="DialogueHUD/DialogueBackground/DiagChoiceBackground"]
layout_mode = 0
offset_left = 24.0
offset_top = 104.0
offset_right = 112.0
offset_bottom = 120.0
theme_override_fonts/font = ExtResource("6_lpdjx")
text = "Choice-7"
autowrap_mode = 2

[node name="Choice8" type="Label" parent="DialogueHUD/DialogueBackground/DiagChoiceBackground"]
layout_mode = 0
offset_left = 24.0
offset_top = 120.0
offset_right = 112.0
offset_bottom = 136.0
theme_override_fonts/font = ExtResource("6_lpdjx")
text = "Choice-8"
autowrap_mode = 2

[node name="Choice9" type="Label" parent="DialogueHUD/DialogueBackground/DiagChoiceBackground"]
layout_mode = 0
offset_left = 24.0
offset_top = 136.0
offset_right = 112.0
offset_bottom = 152.0
theme_override_fonts/font = ExtResource("6_lpdjx")
text = "Choice-9"
autowrap_mode = 2

[node name="Choice10" type="Label" parent="DialogueHUD/DialogueBackground/DiagChoiceBackground"]
layout_mode = 0
offset_left = 24.0
offset_top = 152.0
offset_right = 112.0
offset_bottom = 168.0
theme_override_fonts/font = ExtResource("6_lpdjx")
text = "Choice-10"
autowrap_mode = 2

[node name="Choice11" type="Label" parent="DialogueHUD/DialogueBackground/DiagChoiceBackground"]
layout_mode = 0
offset_left = 24.0
offset_top = 168.0
offset_right = 112.0
offset_bottom = 184.0
theme_override_fonts/font = ExtResource("6_lpdjx")
text = "Choice-11"
autowrap_mode = 2

[node name="Choice12" type="Label" parent="DialogueHUD/DialogueBackground/DiagChoiceBackground"]
layout_mode = 0
offset_left = 24.0
offset_top = 184.0
offset_right = 112.0
offset_bottom = 200.0
theme_override_fonts/font = ExtResource("6_lpdjx")
text = "Choice-12"
autowrap_mode = 2

[node name="Choice13" type="Label" parent="DialogueHUD/DialogueBackground/DiagChoiceBackground"]
layout_mode = 0
offset_left = 24.0
offset_top = 200.0
offset_right = 112.0
offset_bottom = 216.0
theme_override_fonts/font = ExtResource("6_lpdjx")
text = "Choice-13"
autowrap_mode = 2

[node name="Choice14" type="Label" parent="DialogueHUD/DialogueBackground/DiagChoiceBackground"]
layout_mode = 0
offset_left = 24.0
offset_top = 216.0
offset_right = 112.0
offset_bottom = 232.0
theme_override_fonts/font = ExtResource("6_lpdjx")
text = "Choice-14"
autowrap_mode = 2

[node name="Choice15" type="Label" parent="DialogueHUD/DialogueBackground/DiagChoiceBackground"]
layout_mode = 0
offset_left = 24.0
offset_top = 232.0
offset_right = 112.0
offset_bottom = 248.0
theme_override_fonts/font = ExtResource("6_lpdjx")
text = "Choice-15"
autowrap_mode = 2

[node name="Close" type="Label" parent="DialogueHUD/DialogueBackground/DiagChoiceBackground"]
layout_mode = 0
offset_left = 24.0
offset_top = 256.0
offset_right = 112.0
offset_bottom = 272.0
theme_override_fonts/font = ExtResource("6_lpdjx")
text = "Close"
autowrap_mode = 2

[node name="Status" type="Node2D" parent="."]
visible = false
